frontend/public/css/partifi.css
/* ... */
.box-top {
	width: 734px;
	height: 15px;
	background-image: url('/images/box_top.png');
	position: absolute;
	top: -5px;
	left: 0px;
	pointer-events: none;
}

.box-bottom {
	width: 734px;
	height: 15px;
	background-image: url('/images/box_bottom.png');
	position: absolute;
	bottom: -5px;
	left: 0px;
	pointer-events: none;
}

.download-menu {
	font-family: 'IM Fell DW Pica SC', serif;
	font-size: 16px;
	position: absolute;
	top: 10px;
	right: 20px;
	color: gray;
	white-space: nowrap;
}

.partset-info {
	font-family: 'IM Fell DW Pica SC', serif;
	font-size: 16px;
	position: relative;
	left: 30px;
	width: 600px;
	height: auto;
	text-align: left;
	border-bottom: 2px dotted gray;
	margin-top: 45px;
	margin-bottom: 20px;
	padding-bottom: 30px;
	color: gray;
}

.score-title {
	font-size: 24px;
	color: black;
	margin-bottom: 5px;
}

.score-composer {
	margin-bottom: 5px;
}

.partset-download {
	font-family: 'IM Fell DW Pica SC', serif;
	font-size: 16px;
	position: relative;
	left: 30px;
	width: 600px;
	height: auto;
	text-align: left;
	border-bottom: 2px dotted gray;
	margin-top: 20px;
	padding-bottom: 20px;
	color: gray;
	line-height: 30px;
}

.download-title{
	font-size: 24px;
	color: black;
	margin-bottom: 10px;
}

.partset-links {
	font-family: 'IM Fell DW Pica SC', serif;
	font-size: 16px;
	position: relative;
	left: 30px;
	width: 550px;
	height: auto;
	text-align: left;
	margin-top: 40px;
	margin-bottom: 20px;
	color: gray;
	line-height: 30px;
}

.partset-link {
	height: 50px;
	position: relative;
}

.partset-link-label {
	text-align: right;
	width: 100px;
	position: absolute;
	top: 0px;
}

.partset-link-link {
	position: absolute;
	width: 250px;
	top: 0px;
	left: 120px;
	border-bottom: 2px dotted gray;
}

.partset-link-tip {
	position: absolute;
	top: -3px;
	left: 340px;
}

.copy-button 
{
	position: absolute;
	top: -6px;
	left: 400px;
	padding: 2px 20px 2px 20px;
	width: 50px;
	background: #D8D5C2;
	font-family: 'IM Fell Great Primer', serif;
	font-size: 15px;
	color: #E00000;
	border: 0px;
	border-radius:6px;
	box-shadow: 0px 1px 1px black;
	cursor: pointer;
	text-align: center;
}

.copy-button:active
{
	background: #9b9485;
}

.share-button 
{
	position: absolute;
	top: -6px;
	left: 500px;
	padding: 2px 20px 2px 20px;
	width: 50px;
	background: #D8D5C2;
	font-family: 'IM Fell Great Primer', serif;
	font-size: 15px;
	color: #E00000;
	border: 0px;
	border-radius:6px;
	box-shadow: 0px 1px 1px black;
	cursor: pointer;
	text-align: center;
}

.share-button:active
{
	background: #9b9485;
}

.save-button 
{
	position: absolute;
	top: 83px;
	left: 500px;
	padding: 2px 20px 2px 20px;
	width: auto;
	background: #D8D5C2;
	font-family: 'IM Fell Great Primer', serif;
	font-size: 15px;
	color: #E00000;
	border: 0px;
	border-radius:6px;
	box-shadow: 0px 1px 1px black;
	cursor: pointer;
	line-height: 30px;
	display: none;
}

.cancel-button 
{
	position: absolute;
	top: 83px;
	left: 580px;
	padding: 2px 20px 2px 20px;
	width: auto;
	background: #D8D5C2;
	font-family: 'IM Fell Great Primer', serif;
	font-size: 15px;
	color: #E00000;
	border: 0px;
	border-radius:6px;
	box-shadow: 0px 1px 1px black;
	cursor: pointer;
	line-height: 30px;
	display: none;
}

.metadata-edit
{
	width:450px;
	padding-bottom: 3px;
	font-family: 'IM Fell DW Pica SC', serif;
	font-size: 16px;
	color: black;
}

.field-prompt
{
	color: gray;
}

/* MY LIBRARY */

#library-pane {
	position: absolute;
	top: 95px;
	left: 228px;
	width: 734px;
	height: 600px;
	overflow: hidden;
}

#library-items-wrapper {
	position: absolute;
	top:0px;
	left:0px;
}

.library-item
{
	width: 734px;
	height: auto;
	background-image: url('/images/box_middle.png');
	position: absolute;
	top: 5px;
	left: 0px;
}

#left-library-nav {
	background-image: url('/images/left_arrow.png');
	position: absolute;
	width: 70px;
	height: 79px;
	top: 300px;
	left: 100px;
	cursor: pointer;
}

#right-library-nav {
	background-image: url('/images/right_arrow.png');
	position: absolute;
	width: 70px;
	height: 79px;
	top: 300px;
	left: 1020px;
	cursor: pointer;
}

.veil {
	position: absolute;
	top: 0px;
	left: 6px;
	background-color: white;
	opacity:0;
	height: 100%;
	width: 723px;
	z-index: 100;
}

#no-parts {
	margin-top: 210px;
	width: 100%;
	text-align:center;
	font-family: 'IM Fell Great Primer', serif;
	font-size: 28px;
}

#library-layout {
	position: absolute;
	top: 95px;
	left: 80px;
	right: 80px;
	height: 620px;
}

#library-list {
	position: absolute;
	top: 0;
	left: 0;
	width: 220px;
	height: 100%;
	overflow-y: auto;
	padding-right: 8px;
}

.library-list-item {
	font-family: 'IM Fell DW Pica SC', serif;
	font-size: 14px;
	text-align: left;
	color: gray;
	padding: 12px 10px;
	border-bottom: 2px dotted gray;
	cursor: pointer;
}

.library-list-item:hover {
	color: black;
}

.library-list-item.selected {
	background-color: rgba(255, 255, 255, 0.55);
	color: black;
}

.library-list-title {
	font-size: 17px;
	color: black;
	margin-bottom: 4px;
	line-height: 1.2;
}

.library-list-composer {
	font-size: 14px;
	line-height: 1.2;
}

#library-detail {
	position: absolute;
	top: 0;
	left: 240px;
	width: 734px;
	height: 100%;
	overflow-y: auto;
}

#library-detail .library-item {
	position: relative;
	top: 0;
	left: 0;
	/* Reserve space for the absolute download menu; padding prevents margin collapse. */
	padding-top: 45px;
	padding-bottom: 16px;
}

#library-detail .partset-info {
	margin-top: 0;
}

#library-detail .download-menu {
	z-index: 10;
}


/* SERP */

#search-box {
	position: relative;
	width: 100%;
	min-height: 130px;
	z-index: 1;
}

#search-results-wrapper {
	position: absolute;
	top: 150px;
	left: 228px;
	width: 734px;
	height: 600px;
	overflow: hidden;
}

#search-results-pages {
	position: absolute;
	top: 0px;
	left: 0px;
}


.search-results-page
{
	width: 734px;
	height: auto;
	position: absolute;
	top: 5px;
	left: 0px;
	background-image: url('/images/box_middle.png');
}

.search-results {
	position: relative;
	height: auto;
	padding: 10px;
}
/* ... */

